--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "jest-localstorage-mock": "^2.4.21",
     "lint-staged": "^12.3.7",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
