--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "check": "npm-check -u -s"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,7 @@
     "@testing-library/react": "^12.1.5",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.24",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.3.3",
@@ -38,7 +39,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-localstorage-mock": "^2.4.21",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^12.3.8",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
